# srrg

./: README.md
srrg_boss/src/srrg_boss/: CMakeLists.txt  bidirectional_serializer.cpp  bidirectional_serializer.h  blob.cpp  blob.h  deserializer.cpp  deserializer.h  eigen_boss_plugin.hpp  id_context.cpp  id_context.h  id_placeholder.cpp  id_placeholder.h  identifiable.cpp  identifiable.h  json_message_parser.cpp  json_message_parser.h  json_message_writer.cpp  json_message_writer.h  json_object_parser.cpp  json_object_parser.h  json_object_writer.cpp  json_object_writer.h  logger.cpp  logger.h  message.cpp  message.h  message_data.cpp  message_data.h  message_parser.cpp  message_parser.h  message_writer.cpp  message_writer.h  object_data.cpp  object_data.h  object_parser.cpp  object_parser.h  object_writer.cpp  object_writer.h  serializable.cpp  serializable.h  (+7 more)
srrg_core/src/applications/: CMakeLists.txt  srrg_txt_io_converter_euroc_app.cpp  srrg_txt_io_converter_kitti_app.cpp  srrg_txt_io_merger_app.cpp  srrg_txt_io_sorter_app.cpp
srrg_core/src/srrg_txt_io/: CMakeLists.txt  base_image_message.cpp  base_image_message.h  base_message.cpp  base_message.h  base_sensor_message.cpp  base_sensor_message.h  imu_message.cpp  imu_message.h  joint_state_message.cpp  joint_state_message.h  laser_message.cpp  laser_message.h  message_dumper_trigger.cpp  message_dumper_trigger.h  message_enlister_trigger.cpp  message_enlister_trigger.h  message_enqueuer_trigger.h  message_factory.cpp  message_factory.h  message_reader.cpp  message_reader.h  message_seq_synchronizer.cpp  message_seq_synchronizer.h  message_timestamp_synchronizer.cpp  message_timestamp_synchronizer.h  message_writer.cpp  message_writer.h  pinhole_image_message.cpp  pinhole_image_message.h  pose_message.cpp  pose_message.h  property.cpp  property.h  sensor_message_sorter.cpp  sensor_message_sorter.h  spherical_image_message.cpp  spherical_image_message.h  static_transform_message.cpp  static_transform_message.h  (+4 more)
srrg_core_map/src/srrg_core_map/: CMakeLists.txt  base_camera_info.cpp  base_camera_info.h  binary_node_relation.cpp  binary_node_relation.h  cloud.cpp  cloud.h  image_map_node.cpp  image_map_node.h  local_map.cpp  local_map.h  local_map_with_traversability.cpp  local_map_with_traversability.h  map_node.cpp  map_node.h  map_node_list.cpp  map_node_list.h  multi_camera_info.cpp  multi_camera_info.h  multi_image_map_node.cpp  multi_image_map_node.h  pinhole_camera_info.cpp  pinhole_camera_info.h  spherical_camera_info.cpp  spherical_camera_info.h  traversability_map.cpp  traversability_map.h
srrg_core_map_gui/src/srrg_core_map_viewers/: CMakeLists.txt  cloud_viewer.cpp  cloud_viewer.h  trajectory_viewer.cpp  trajectory_viewer.h
srrg_core_ros/src/srrg_ros_wrappers/: CMakeLists.txt  image_message_listener.cpp  image_message_listener.h  imu_message_listener.cpp  imu_message_listener.h  joint_state_message_listener.cpp  joint_state_message_listener.h  laser_message_listener.cpp  laser_message_listener.h  multiecholaser_message_listener.cpp  multiecholaser_message_listener.h  odom_tf_publisher.cpp  odom_tf_publisher.h  spherical_image_message_listener.cpp  spherical_image_message_listener.h
srrg_core_viewers/: CMakeLists.txt  README.md  package.xml
srrg_core_viewers/src/: CMakeLists.txt
srrg_core_viewers/src/srrg_core_viewers/: CMakeLists.txt  simple_viewer.cpp  simple_viewer.h
srrg_depth2laser_gui/src/srrg_depth2laser_viewers/: CMakeLists.txt  depth2laser_viewer.cpp  depth2laser_viewer.h
srrg_local_maps_condenser_gui/src/srrg_local_maps_condenser_viewers/: CMakeLists.txt  condenser_viewer.cpp  condenser_viewer.h
srrg_nicp/src/examples/: CMakeLists.txt  srrg_nicp_3dscan2cloud_example.cpp  (+3 more)
srrg_nw_calibration_ros/: CMakeLists.txt  README.md  package.xml
srrg_nw_calibration_ros/init_guess/: init_params.txt  lucrezio.txt  lucrezio.txt~
srrg_nw_calibration_ros/src/: CMakeLists.txt
srrg_orazio_core/: CMakeLists.txt  README.md  package.xml
srrg_orazio_core/arduino/: Makefile  arduino_robot.ino  comm_globals.cpp  differential_drive_kinematics.h  eeprom.cpp  encoder.cpp  encoder.h  globals.d  joint_controller.h  motor.h  packet_decoder.cpp  packet_decoder.h  packets.h
srrg_orazio_core/dspic/: Arduino.cpp  Arduino.h  EEPROM.cpp  EEPROM.h  Makefile  comm_globals.h  defines.h  differential_drive_kinematics.cpp  dspic_machine_config.c  dspic_machine_config.h  dspic_robot_main.cpp  dspic_serial.c  dspic_serial.h  dspic_settings.c  dspic_settings.h  eeprom.h  encoder.cpp  encoder.h  generic_utils.c  generic_utils.h  globals.cpp  globals.h  joint_controller.cpp  main.cpp  main_old.c  motor.cpp  packet_encoder.cpp  packet_encoder.h
srrg_orazio_core/firmware/: comm_globals.cpp  comm_globals.h  differential_drive_kinematics.cpp  differential_drive_kinematics.h  eeprom.cpp  eeprom.h  globals.cpp  globals.d  globals.h  joint_controller.cpp  joint_controller.h  motor.cpp  motor.h  packet_decoder.cpp  packet_decoder.h  packet_encoder.cpp  packet_encoder.h  packets.h
srrg_orazio_core/html/: index.html  index_controller.html  menu.html  orazio.js  orazio_joints.html  orazio_joints_help.html  orazio_joints_help.html~  orazio_joystick.html  orazio_kinematics.html  orazio_kinematics_help.html  orazio_system.html  orazio_system_help.html  orazio_system_help.html~
srrg_orazio_core/src/: #CMakeLists.txt#  Makefile  command_parser.cpp  command_parser.h  differential_drive_kinematics.cpp  differential_drive_kinematics.h  joint_controller.cpp  joint_controller.h  orazio_robot_connection.cpp  orazio_robot_connection.h  orazio_robot_monitor  orazio_robot_monitor.cpp  orazio_robot_node.cpp  orazio_robot_shell  orazio_robot_shell.cpp  orazio_robot_websocket_server  orazio_robot_websocket_server.cpp  packet_decoder.cpp  packet_decoder.h  packet_encoder.cpp  packet_encoder.h  packet_encoder_test.cpp  packets.h  robot_program.cpp  serial.c  serial.h
srrg_orbslam2_wrapper/: CMakeLists.txt  README.md  package.xml
srrg_orbslam2_wrapper/src/: CMakeLists.txt  srrg_file_converter.cpp  srrg_orbslam2_wrapper_node.cpp
(+266 files in other folders)
